# frankentui

./: .gitignore  CHANGELOG.md  Cargo.toml  FIXES_SUMMARY.md  README.md  REVIEW_REPORT.md  SESSION_TODO.md  frankentui_showcase_demo.html  perf.data  repro_rope.rs
crates/frankenterm-core/: Cargo.toml
crates/frankenterm-core/benches/: parser_patch_bench.rs
crates/frankenterm-core/src/: cell.rs  grid.rs  lib.rs  parser.rs  scrollback.rs  selection.rs
crates/frankenterm-core/tests/: conformance_fixtures.rs  differential_extras_reference.rs  differential_terminal.rs  model_check_terminal.rs  proptest_invariants.rs
crates/frankenterm-web/: Cargo.toml
crates/frankenterm-web/src/: frame_harness.rs  glyph_atlas.rs  input.rs  lib.rs  patch_feed.rs  renderer.rs  wasm.rs
crates/frankenterm-web/tests/: proptest_input_invariants.rs
crates/ftui/: Cargo.toml
crates/ftui-core/: Cargo.toml
crates/ftui-core/src/: animation.rs  capability_override.rs  caps_probe.rs  cursor.rs  event.rs  event_coalescer.rs  geometry.rs  glyph_policy.rs  hover_stabilizer.rs  inline_mode.rs  input_parser.rs  key_sequence.rs  lib.rs  logging.rs  terminal_capabilities.rs  terminal_session.rs
crates/ftui-core/src/animation/: callbacks.rs  group.rs  mod.rs  stagger.rs
crates/ftui-core/tests/: animation_test.rs  proptest_geometry_invariants.rs
crates/ftui-demo-showcase/: Cargo.toml
crates/ftui-demo-showcase/benches/: action_timeline_bench.rs  theme_studio_bench.rs
crates/ftui-demo-showcase/src/: app.rs  chrome.rs  cli.rs  main.rs  theme.rs  tour.rs
crates/ftui-demo-showcase/src/screens/: action_timeline.rs  advanced_features.rs  advanced_text_editor.rs  async_tasks.rs  code_explorer.rs  command_palette_lab.rs  dashboard.rs  data_viz.rs  explainability_cockpit.rs  file_browser.rs  form_validation.rs  forms_input.rs  i18n_demo.rs  layout_lab.rs  macro_recorder.rs  markdown_live_editor.rs  markdown_rich_text.rs  mermaid_mega_showcase.rs  mermaid_showcase.rs  mod.rs  mouse_playground.rs  performance.rs  performance_hud.rs  responsive_demo.rs  shakespeare.rs  table_theme_gallery.rs  terminal_capabilities.rs  theme_studio.rs  virtualized_search.rs  visual_effects.rs  widget_gallery.rs
crates/ftui-demo-showcase/tests/: a11y_snapshots.rs  async_tasks_stress.rs  capability_sim_e2e.rs  command_palette_e2e.rs  form_validation_e2e.rs  global_shortcuts_e2e.rs  golden_trace_corpus.rs  i18n_e2e.rs  inspector_stress.rs  macro_recorder_determinism.rs  macro_recorder_e2e.rs  mega_showcase_e2e.rs  mermaid_showcase_pty.rs  perf_hud_ux_a11y.rs  screen_snapshots.rs  snapshot_player_ux_a11y.rs  terminal_capabilities_ux_a11y.rs  terminal_e2e.rs  visual_effects_pty.rs
crates/ftui-demo-showcase/tests/golden/: vfx_doom-e1m1_120x40_16ms_seed42.checksums  vfx_mandelbrot_120x40_16ms_seed42.checksums  vfx_metaballs_120x40_16ms_seed42.checksums  vfx_plasma_120x40_16ms_seed42.checksums  vfx_quake-e1m1_120x40_16ms_seed42.checksums
crates/ftui-demo-showcase/tests/snapshots/: a11y_all_modes_dashboard_120x40.snap  a11y_all_modes_dashboard_80x24.snap  (+216 more)
crates/ftui-extras/: Cargo.toml
crates/ftui-extras/benches/: diagram_layout_bench.rs  mermaid_layout_bench.rs  visual_fx_bench.rs
crates/ftui-extras/src/: canvas.rs  charts.rs  clipboard.rs  console.rs  diagram_layout.rs  dot_parser.rs  export.rs  filepicker.rs  forms.rs  glowing_text.rs  image.rs  lib.rs  logging.rs  markdown.rs  mermaid.rs  mermaid_diff.rs  mermaid_layout.rs  mermaid_minimap.rs  mermaid_render.rs  syntax.rs  text_effects.rs  theme.rs  traceback.rs  visual_fx.rs
crates/ftui-extras/tests/: markdown_table_snapshots.rs  mermaid_fixtures.rs  terminal_integration.rs  text_effects_snapshots.rs
crates/ftui-harness/: Cargo.toml
crates/ftui-harness/src/: asciicast.rs  flicker_detection.rs  golden.rs  lib.rs  main.rs  resize_storm.rs
crates/ftui-harness/tests/: editor_snapshots.rs  golden_reflow.rs  golden_resize.rs  reflow_snapshots.rs  resize_storm_e2e.rs  widget_snapshots.rs
crates/ftui-render/: Cargo.toml
crates/ftui-render/benches/: double_buffer_bench.rs
crates/ftui-render/src/: ansi.rs  budget.rs  buffer.rs  cell.rs  counting_writer.rs  diff.rs  drawing.rs  frame.rs  grapheme_pool.rs  lib.rs  link_registry.rs  presenter.rs  spatial_hit_index.rs  terminal_model.rs
crates/ftui-render/tests/: allocation_budget_integration.rs  headless_integration.rs  presenter_control_chars.rs  repro_orphan_continuation.rs  wide_char_repro.rs
crates/ftui-runtime/: Cargo.toml
crates/ftui-runtime/src/: allocation_budget.rs  asciicast.rs  bocpd.rs  conformal_alert.rs  cost_model.rs  countmin_sketch.rs  debug_trace.rs  lib.rs  locale.rs  program.rs  queueing_scheduler.rs  resize_coalescer.rs  resize_sla.rs  schedule_trace.rs  simulator.rs  state_persistence.rs  subscription.rs  telemetry.rs  terminal_writer.rs  timeline_aggregator.rs  voi_sampling.rs  voi_telemetry.rs
crates/ftui-runtime/tests/: batch_quit.rs  proptest_voi_conformal_invariants.rs  resize_migration_compat.rs  state_persistence_e2e.rs
crates/ftui-text/: Cargo.toml
crates/ftui-text/benches/: width_bench.rs
crates/ftui-text/src/: bidi.rs  editor.rs  lib.rs  markup.rs  search.rs  segment.rs  text.rs  view.rs  width_cache.rs  wrap.rs
crates/ftui-text/tests/: unicode_width_corpus.rs
crates/ftui-web/: Cargo.toml
crates/ftui-web/src/: lib.rs  session_record.rs  step_program.rs
crates/ftui-widgets/: Cargo.toml
crates/ftui-widgets/benches/: widget_bench.rs
crates/ftui-widgets/src/: align.rs  badge.rs  block.rs  columns.rs  constraint_overlay.rs  drag.rs  error_boundary.rs  fenwick.rs  file_picker.rs  group.rs  help.rs  input.rs  inspector.rs  json_view.rs  layout_debugger.rs  lib.rs  list.rs  log_viewer.rs  measure_cache.rs  padding.rs  paginator.rs  panel.rs  paragraph.rs  pretty.rs  progress.rs  rule.rs  scrollbar.rs  sparkline.rs  spinner.rs  stateful.rs  status_line.rs  stopwatch.rs  table.rs  textarea.rs  timer.rs  toast.rs  tree.rs  validation_error.rs  virtualized.rs  voi_debug_overlay.rs
crates/ftui-widgets/tests/: frame_integration.rs  tracing_tests.rs
crates/ftui/src/: lib.rs
(+205 files in other folders)
