[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
  "crates/ftui",
  "crates/ftui-core",
  "crates/ftui-render",
  "crates/ftui-style",
  "crates/ftui-text",
  "crates/ftui-layout",
  "crates/ftui-runtime",
  "crates/ftui-widgets",
  "crates/ftui-extras",
  "crates/ftui-harness",
  "crates/ftui-i18n",
  "crates/ftui-pty",
  "crates/ftui-simd",
  "crates/ftui-demo-showcase",
  "crates/frankenterm-core",
  "crates/frankenterm-web",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
