[package]
name = "frankenterm-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WASM frontend for FrankenTerm: web rendering + input, exported via wasm-bindgen."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/frankenterm-web"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
frankenterm-core = { path = "../frankenterm-core", version = "0.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement"] }

