[package]
name = "frankenterm-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WASM frontend for FrankenTerm: web rendering + input, exported via wasm-bindgen."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/frankenterm-web"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
frankenterm-core = { path = "../frankenterm-core", version = "0.1.0" }
ftui-render = { path = "../ftui-render", version = "0.1.1" }
bitflags = "2.10.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["HtmlCanvasElement"] }
wgpu = { version = "28.0.0", default-features = false, features = ["std", "wgsl", "webgpu"] }

[dev-dependencies]
proptest = "1.7.0"
