[package]
name = "frankenterm-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WASM frontend for FrankenTerm: web rendering + input, exported via wasm-bindgen."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/frankenterm-web"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# wasm-pack bundles an older wasm-opt; Rust 2024 wasm output requires explicit
# feature enabling to avoid validation failures.
wasm-opt = ["-Oz", "--all-features"]

[features]
default = []

[dependencies]
frankenterm-core = { path = "../frankenterm-core", version = "0.1.0" }
ftui-render = { path = "../ftui-render", version = "0.1.1" }
bitflags = "2.10.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
unicode-normalization = "0.1.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
wgpu = { version = "28.0.0", default-features = false, features = ["std", "wgsl", "webgpu"] }
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.7.0"

[[bench]]
name = "renderer_bench"
harness = false
