[package]
name = "ftui-core"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Terminal lifecycle, capabilities, and event parsing for FrankenTUI."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-core"
readme = "../../README.md"

[features]
default = []
# Enable structured logging with tracing
tracing = ["dep:tracing"]
# Enable JSON output for production logging
tracing-json = ["tracing", "dep:tracing-subscriber"]
# Enable runtime terminal capability probing (DA queries, OSC probes).
# Requires exclusive terminal ownership; probes are bounded by timeouts.
caps-probe = []
test-helpers = []

[dependencies]
bitflags = "2.10.0"
unicode-display-width = "0.3.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

# Native terminal backend dependency (not available on wasm32-unknown-unknown).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"

# Unix-only signal handling for cleanup on SIGINT/SIGTERM.
[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.4.3", features = ["iterator"] }

# Optional tracing support
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"], optional = true }

[dev-dependencies]
# For spike PTY tests
portable-pty = "0.9.0"
proptest = "1.7.0"
