[package]
name = "ftui-demo-showcase"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ftui-core = { path = "../ftui-core", features = ["caps-probe"] }
ftui-i18n = { path = "../ftui-i18n" }
ftui-render = { path = "../ftui-render" }
ftui-style = { path = "../ftui-style" }
ftui-text = { path = "../ftui-text", features = ["markup", "bidi"] }
ftui-layout = { path = "../ftui-layout" }
ftui-runtime = { path = "../ftui-runtime", features = ["tracing"] }
ftui-widgets = { path = "../ftui-widgets", features = ["tracing"] }
tracing = "0.1"
ftui-extras = { path = "../ftui-extras", features = [
    "canvas",
    "charts",
    "clipboard",
    "console",
    "export",
    "filesize",
    "filepicker",
    "forms",
    "image",
    "live",
    "logging",
    "markdown",
    "stopwatch",
    "syntax",
    "text-effects",
    "timer",
    "traceback",
    "theme",
    "visual-fx",
] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"

[features]
debug-render = []
caps-probe = ["ftui-core/caps-probe"]
default = ["caps-probe"]
# Enable test-support to expose test infrastructure (locks, guards) to integration tests
test-support = []

[dev-dependencies]
ftui-harness = { path = "../ftui-harness" }
ftui-pty = { path = "../ftui-pty" }
portable-pty = "0.9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "action_timeline_bench"
harness = false

[[bench]]
name = "theme_studio_bench"
harness = false

[[bench]]
name = "perf_hud_bench"
harness = false
