[package]
name = "ftui-extras"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ftui-runtime = { path = "../ftui-runtime" }
ftui-widgets = { path = "../ftui-widgets", optional = true }
ftui-core = { path = "../ftui-core", optional = true }
ftui-render = { path = "../ftui-render", optional = true }
ftui-style = { path = "../ftui-style", optional = true }
ftui-text = { path = "../ftui-text", optional = true }
ftui-pty = { path = "../ftui-pty", optional = true }
base64 = { version = "0.22.1", optional = true }
image = { version = "0.25.9", default-features = false, features = ["png", "gif", "jpeg"], optional = true }
pulldown-cmark = { version = "0.12", default-features = false, optional = true }
unicodeit = { version = "0.2", optional = true }
math-text-transform = { version = "0.1", optional = true }
portable-pty = { version = "0.8.1", optional = true }
vte = { version = "0.13", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
unicode-segmentation = { version = "1.12.0", optional = true }
unicode-width = { version = "0.2.2", optional = true }
bytemuck = { version = "1.15.0", features = ["derive"], optional = true }
pollster = { version = "0.3.0", optional = true }
wgpu = { version = "28.0.0", optional = true, features = ["wgsl"] }

[features]
canvas = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-widgets"]
charts = ["canvas", "dep:unicode-width"]
clipboard = ["dep:base64", "dep:ftui-core"]
console = ["dep:ftui-render", "dep:ftui-style", "dep:ftui-text", "dep:unicode-segmentation", "dep:unicode-width"]
clipboard-fallback = ["clipboard"]
clipboard-logging = ["clipboard", "dep:tracing"]
image = ["dep:base64", "dep:ftui-core", "dep:image"]
markdown = ["dep:pulldown-cmark", "dep:ftui-render", "dep:ftui-style", "dep:ftui-text", "dep:unicodeit", "dep:math-text-transform", "diagram"]
export = ["dep:ftui-render"]
filesize = []
forms = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-widgets", "dep:unicode-segmentation", "dep:unicode-width"]
validation = []
pty-capture = ["dep:portable-pty", "dep:ftui-core"]
live = ["console"]
logging = ["console", "dep:tracing", "dep:tracing-subscriber"]
syntax = ["dep:ftui-render", "dep:ftui-style", "dep:ftui-text"]
filepicker = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-text", "dep:unicode-width"]
traceback = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:unicode-width"]
stopwatch = []
timer = []
diagram = ["dep:unicode-width"]
theme = ["dep:ftui-render", "dep:ftui-style"]
text-effects = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-widgets"]
visual-fx = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-widgets"]
visual-fx-metaballs = ["visual-fx"]
visual-fx-plasma = ["visual-fx"]
# GPU acceleration is strictly opt-in. No GPU deps are pulled unless this feature is enabled.
fx-gpu = ["visual-fx-metaballs", "dep:bytemuck", "dep:pollster", "dep:wgpu"]
terminal = ["dep:vte", "dep:ftui-core", "dep:ftui-style"]
terminal-widget = ["terminal", "dep:ftui-render", "dep:ftui-widgets", "dep:ftui-pty"]

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
ftui-harness = { path = "../ftui-harness" }
ftui-core = { path = "../ftui-core" }
ftui-render = { path = "../ftui-render" }
ftui-widgets = { path = "../ftui-widgets" }
ftui-pty = { path = "../ftui-pty" }
ftui-style = { path = "../ftui-style" }
portable-pty = "0.8.1"

[[bench]]
name = "text_effects_bench"
harness = false
required-features = ["text-effects"]

[[test]]
name = "backdrop_composition_tests"
required-features = ["visual-fx"]
