[package]
name = "ftui-extras"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Feature-gated extras for FrankenTUI (markdown, charts, clipboard, themes)."
repository = "https://github.com/Dicklesworthstone/frankentui"
homepage = "https://github.com/Dicklesworthstone/frankentui"
documentation = "https://docs.rs/ftui-extras"
readme = "../../README.md"

[dependencies]
ftui-runtime = { path = "../ftui-runtime", version = "0.1.1", optional = true }
ftui-widgets = { path = "../ftui-widgets", version = "0.1.1", optional = true }
ftui-core = { path = "../ftui-core", version = "0.1.1", optional = true }
ftui-render = { path = "../ftui-render", version = "0.1.1", optional = true }
ftui-style = { path = "../ftui-style", version = "0.1.1", optional = true }
ftui-text = { path = "../ftui-text", version = "0.1.1", optional = true }
ftui-pty = { path = "../ftui-pty", version = "0.1.1", optional = true }
base64 = { version = "0.22.1", optional = true }
image = { version = "0.25.9", default-features = false, features = ["png", "gif", "jpeg"], optional = true }
pulldown-cmark = { version = "0.13.0", default-features = false, optional = true }
unicodeit = { version = "0.2.0", optional = true }
math-text-transform = { version = "0.1.1", optional = true }
portable-pty = { version = "0.9.0", optional = true }
vte = { version = "0.15.0", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
unicode-segmentation = { version = "1.12.0", optional = true }
unicode-display-width = { version = "0.3.0", optional = true }
bytemuck = { version = "1.25.0", features = ["derive"], optional = true }
pollster = { version = "0.4.0", optional = true }
wgpu = { version = "28.0.0", optional = true, default-features = false, features = ["std", "parking_lot", "wgsl", "vulkan", "gles", "dx12"] }
serde_json = { version = "1.0.145", optional = true }
web-time = "1.1.0"

[features]
canvas = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-widgets"]
charts = ["canvas", "dep:unicode-display-width", "dep:unicode-segmentation"]
clipboard = ["dep:base64", "dep:ftui-core"]
console = [
  "dep:ftui-render",
  "dep:ftui-style",
  "dep:ftui-text",
  "dep:unicode-segmentation",
  "dep:unicode-display-width",
]
clipboard-fallback = ["clipboard"]
clipboard-logging = ["clipboard", "dep:tracing"]
image = ["dep:base64", "dep:ftui-core", "dep:image"]
markdown = ["dep:pulldown-cmark", "dep:ftui-render", "dep:ftui-style", "dep:ftui-text", "dep:unicodeit", "dep:math-text-transform", "diagram"]
export = ["dep:ftui-render"]
filesize = []
forms = [
  "dep:ftui-core",
  "dep:ftui-render",
  "dep:ftui-style",
  "dep:ftui-widgets",
  "dep:unicode-segmentation",
  "dep:unicode-display-width",
]
validation = []
pty-capture = ["dep:portable-pty", "dep:ftui-core", "dep:ftui-runtime"]
live = ["console"]
logging = ["console", "dep:tracing", "dep:tracing-subscriber"]
syntax = ["dep:ftui-render", "dep:ftui-style", "dep:ftui-text"]
filepicker = [
  "dep:ftui-core",
  "dep:ftui-render",
  "dep:ftui-style",
  "dep:ftui-text",
  "dep:unicode-display-width",
]
traceback = [
  "dep:ftui-core",
  "dep:ftui-render",
  "dep:ftui-style",
  "dep:unicode-display-width",
  "dep:unicode-segmentation",
]
stopwatch = []
timer = []
diagram = ["dep:unicode-segmentation", "dep:unicode-display-width", "dep:serde_json", "dep:ftui-core", "dep:ftui-render", "dep:ftui-style"]
theme = ["dep:ftui-render", "dep:ftui-style"]
text-effects = [
  "dep:ftui-core",
  "dep:ftui-render",
  "dep:ftui-style",
  "dep:ftui-text",
  "dep:ftui-widgets",
]
visual-fx = ["dep:ftui-core", "dep:ftui-render", "dep:ftui-style", "dep:ftui-widgets"]
visual-fx-metaballs = ["visual-fx"]
visual-fx-plasma = ["visual-fx"]
# GPU acceleration is strictly opt-in. No GPU deps are pulled unless this feature is enabled.
fx-gpu = ["visual-fx-metaballs", "dep:bytemuck", "dep:pollster", "dep:wgpu"]
terminal = ["dep:vte", "dep:ftui-core", "dep:ftui-style"]
terminal-widget = ["terminal", "dep:ftui-render", "dep:ftui-widgets", "dep:ftui-pty"]
help = [
  "dep:ftui-core",
  "dep:ftui-render",
  "dep:ftui-style",
  "dep:ftui-widgets",
  "dep:unicode-segmentation",
  "dep:unicode-display-width",
]
doom = ["canvas", "dep:ftui-core", "dep:ftui-render", "dep:ftui-style"]
quake = ["canvas", "dep:ftui-core", "dep:ftui-render", "dep:ftui-style"]

[dev-dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
criterion = { version = "0.8.2", features = ["html_reports"] }
stats_alloc = "0.1.10"
ftui-core = { path = "../ftui-core", version = "0.1.1" }
ftui-render = { path = "../ftui-render", version = "0.1.1" }
ftui-layout = { path = "../ftui-layout", version = "0.1.1" }
ftui-widgets = { path = "../ftui-widgets", version = "0.1.1" }
ftui-pty = { path = "../ftui-pty", version = "0.1.1" }
ftui-style = { path = "../ftui-style", version = "0.1.1" }
portable-pty = "0.9.0"
unicode-width = "0.2.2"
vt100 = "0.16.2"
proptest = "1.7.0"

[[bench]]
name = "text_effects_bench"
harness = false
required-features = ["text-effects"]

[[bench]]
name = "metaballs_bench"
harness = false
required-features = ["visual-fx"]

[[bench]]
name = "visual_fx_bench"
harness = false
required-features = ["visual-fx"]

[[bench]]
name = "plasma_bench"
harness = false
required-features = ["visual-fx"]

[[bench]]
name = "diagram_layout_bench"
harness = false
required-features = ["diagram"]

[[bench]]
name = "mermaid_layout_bench"
harness = false
required-features = ["diagram"]

[[test]]
name = "proptest_mermaid_layout_invariants"
required-features = ["diagram"]

[[test]]
name = "proptest_mermaid_parser_invariants"
required-features = ["diagram"]

[[test]]
name = "proptest_mermaid_render_invariants"
required-features = ["diagram"]

[[test]]
name = "proptest_sampling_invariants"
required-features = ["visual-fx"]

[[test]]
name = "backdrop_composition_tests"
required-features = ["visual-fx"]
