[package]
name = "ftui-harness"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
pty-capture = ["dep:ftui-extras", "dep:portable-pty"]

[dependencies]
ftui-render = { path = "../ftui-render" }
ftui-core = { path = "../ftui-core" }
ftui-runtime = { path = "../ftui-runtime" }
ftui-widgets = { path = "../ftui-widgets" }
ftui-style = { path = "../ftui-style" }
ftui-text = { path = "../ftui-text", features = ["markup"] }
ftui-layout = { path = "../ftui-layout" }
ftui-extras = { path = "../ftui-extras", features = ["pty-capture"], optional = true }
portable-pty = { version = "0.8.1", optional = true }
crossterm = "0.28"

[dev-dependencies]
