[package]
name = "ftui-render"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
# Enable performance tracing spans
tracing = ["ftui-core/tracing", "dep:tracing"]

[dependencies]
bitflags = "2.10.0"
memchr = "2"
unicode-width = "0.2"
ftui-core = { path = "../ftui-core" }
tracing = { version = "0.1", optional = true }
# Note: ftui-render is the core kernel and should not depend on ftui-style.
# ftui-style depends on ftui-render (not vice versa).
# ftui-layout = { path = "../ftui-layout" }  # TODO: Add when needed
# ftui-text = { path = "../ftui-text" }      # TODO: Add when needed

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
ftui-core = { path = "../ftui-core" }
ftui-layout = { path = "../ftui-layout" }
ftui-style = { path = "../ftui-style" }
ftui-text = { path = "../ftui-text" }
ftui-widgets = { path = "../ftui-widgets" }
proptest = "1"

[[bench]]
name = "cell_bench"
harness = false

[[bench]]
name = "buffer_bench"
harness = false

[[bench]]
name = "diff_bench"
harness = false

[[bench]]
name = "presenter_bench"
harness = false
