[package]
name = "ftui-runtime"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
# Enable dedicated render/output thread (Mode B).
# When enabled, all terminal output is serialized on a background thread,
# preventing interleaving between logs and UI presents.
render-thread = []
# Best-effort stdio capture to prevent accidental println! from corrupting
# inline mode. See stdio_capture module docs for limitations.
stdio-capture = []
# Enable tracing instrumentation for runtime internals.
tracing = []
# Enable widget state persistence with JSON file storage.
# Adds FileStorage backend for cross-session state persistence.
state-persistence = ["dep:serde", "dep:serde_json", "dep:base64"]
# Enable OpenTelemetry telemetry export via OTLP.
# When enabled, spans can be exported to an OTLP collector.
# Zero overhead when feature is off; minimal overhead when on but disabled via env.
telemetry = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dependencies]
ftui-core = { path = "../ftui-core" }
ftui-layout = { path = "../ftui-layout" }
ftui-render = { path = "../ftui-render" }
ftui-style = { path = "../ftui-style" }
ftui-text = { path = "../ftui-text" }
crossterm = "0.29.0"
tracing = "0.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

# Optional telemetry dependencies (feature-gated)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["http-proto", "reqwest-client"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"], optional = true }

# State persistence dependencies (feature-gated)
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
